Fix legend spacing

--- a/src/app/style/details.css
+++ b/src/app/style/details.css
@@ -53,8 +53,4 @@ body {
     text-anchor: middle;
 }
 
-.recharts-legend-item-text {
-    font-weight: 800;
-}
-
 
